specs/001-typescript-to-zig-native/examples/invalid/arithmetic-type.ts
let value = 1 + "x";
